<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#354ABF"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#354ABF"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="@string/full_name"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@android:color/holo_green_light"
            android:fontFamily="@font/my_font"
            android:hint="@string/full_name_hint"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:background="@android:color/holo_green_light"
            android:fontFamily="@font/my_font"
            android:hint="@string/login_hint"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@android:color/holo_green_light"
            android:fontFamily="@font/my_font"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:background="@android:color/holo_green_light"
            android:fontFamily="@font/my_font"
            android:hint="@string/phone_hint"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@android:color/holo_green_light"
            android:fontFamily="@font/my_font"
            android:hint="@string/password_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@android:color/holo_green_light"
            android:fontFamily="@font/my_font"
            android:hint="@string/repeat_password_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="@string/birth_date"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/birth_date"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/my_font"
                android:hint="@string/birth_date_hint"
                android:imeOptions="actionNext"
                android:inputType="date" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="@string/item_from_list"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#AC4040"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/agreement_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:fontFamily="@font/my_font"
            android:text="@string/agreement"
            android:textColor="@color/white" />
    </LinearLayout>

    <DatePicker
        android:id="@+id/birth_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:visibility="gone"></DatePicker>

    <Button

        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/birth_date_picker"
        android:layout_alignEnd="@id/birth_date_picker"
        android:layout_marginEnd="3dp"
        android:backgroundTint="#ffffffff"
        android:onClick="onCloseButtonClick"
        android:text="@string/close"
        android:textColor="@color/black"
        android:visibility="gone" />

</RelativeLayout>